cmake_minimum_required(VERSION 3.20)
project(SpaceXProject)

set(CMAKE_CXX_STANDARD 14)

include_directories(GroupProject)

add_executable(SpaceXProject
        GroupProject/Build.cpp
        GroupProject/Build.h
        GroupProject/CollectionIterator.h
        GroupProject/Command.h
        GroupProject/CommuncationNetwork.h
        GroupProject/CompositeStage.cpp
        GroupProject/CompositeStage.h
        GroupProject/ConcretePayloadFactory.cpp
        GroupProject/ConcretePayloadFactory.h
        GroupProject/ConcreteRocketFactory.cpp
        GroupProject/ConcreteRocketFactory.h
        GroupProject/ConcreteSatelliteIterator.h
        GroupProject/ConcreteSpaceCraftFactory.cpp
        GroupProject/ConcreteSpaceCraftFactory.h
        GroupProject/Core.cpp
        GroupProject/Core.h
        GroupProject/CoreBuilder.cpp
        GroupProject/CoreBuilder.h
        GroupProject/Destination.h
        GroupProject/Earth.cpp
        GroupProject/Earth.h
        GroupProject/Engine.cpp
        GroupProject/Engine.h
        GroupProject/EngineBuilder.cpp
        GroupProject/EngineBuilder.h
        GroupProject/Falcon9.cpp
        GroupProject/Falcon9.h
        GroupProject/FalconHeavy.cpp
        GroupProject/FalconHeavy.h
        GroupProject/Interrupt.cpp
        GroupProject/Interrupt.h
        GroupProject/ISS.cpp
        GroupProject/ISS.h
        GroupProject/Launch.cpp
        GroupProject/Launch.h
        GroupProject/LowOrbit.cpp
        GroupProject/LowOrbit.h
        GroupProject/main.cpp
        GroupProject/MerlinEngine.cpp
        GroupProject/MerlinEngine.h
        GroupProject/ModifiedMerlinEngine.cpp
        GroupProject/ModifiedMerlinEngine.h
        GroupProject/NextStage.cpp
        GroupProject/NextStage.h
        GroupProject/Payload.cpp
        GroupProject/Payload.h
        GroupProject/PayloadFactory.cpp
        GroupProject/PayloadFactory.h
        GroupProject/Rocket.cpp
        GroupProject/Rocket.h
        GroupProject/RocketFactory.cpp
        GroupProject/RocketFactory.h
        GroupProject/RocketLeaf.cpp
        GroupProject/RocketLeaf.h
        GroupProject/RocketStage.cpp
        GroupProject/RocketStage.h
        GroupProject/Satellite.h
        GroupProject/SatelliteCollection.h
        GroupProject/SatelliteIterator.cpp
        GroupProject/SatelliteIterator.h
        GroupProject/SatelliteVector.h
        GroupProject/SetDestination.cpp
        GroupProject/SetDestination.h
        GroupProject/Simulation.cpp
        GroupProject/Simulation.h
        GroupProject/SimulationBackup.cpp
        GroupProject/SimulationBackup.h
        GroupProject/SimulationBackupStore.cpp
        GroupProject/SimulationBackupStore.h
        GroupProject/SpaceCraft.cpp
        GroupProject/SpaceCraft.h
        GroupProject/SpaceCraftCrewDragon.h
        GroupProject/SpaceCraftDragon.h
        GroupProject/SpaceCraftFactory.cpp
        GroupProject/SpaceCraftFactory.h
        GroupProject/StageBuilder.cpp
        GroupProject/StageBuilder.h
        GroupProject/StarlinkCollection.h
        GroupProject/StarlinkCommunication.h
        GroupProject/StarlinkGroundUser.h
        GroupProject/StarlinkOrbitingSatellite.h
        GroupProject/StarlinkQueue.h
        GroupProject/StarlinkVector.h
        GroupProject/State.h
        GroupProject/TECargoCollection.h
        GroupProject/TECrewCollection.h
        GroupProject/TransportEntities.cpp
        GroupProject/TransportEntities.h
        GroupProject/TransportEntity.h
        GroupProject/TransportEntityCargo.h
        GroupProject/TransportEntityCollection.h
        GroupProject/TransportEntityCrew.h
        GroupProject/unit_test.cpp
        GroupProject/VacuumMerlinEngine.cpp
        GroupProject/VacuumMerlinEngine.h)
